# chainlink-terra-feeds-demo

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
contracts/access-controller/: Cargo.toml
contracts/consumer/src/: msg.rs  state.rs
contracts/deviation-flagging-validator/: Cargo.toml
contracts/flags/: Cargo.toml
contracts/ocr2/: Cargo.toml
contracts/owned/: Cargo.toml
contracts/price-consumer/: Cargo.toml
contracts/price-consumer/src/: contract.rs  msg.rs
contracts/proxy-ocr2/: Cargo.toml
contracts/proxy-ocr2/artifacts/: proxy_ocr2.wasm
scripts/: readLatestPrice.mjs
